fixed buttons to be reverse colors to stay visible

--- a/styles.css
+++ b/styles.css
@@ -119,11 +119,12 @@ h1 {
 
     font-family: "Forum", sans-serif;
     font-weight: 500;
+    /* text-transform: uppercase; */
 
     transition: color 0.3s ease;
 }
 
-.btn span {
+#clickMe span {
     position: absolute;
     left: 0;
     top: 0;
@@ -133,6 +134,18 @@ h1 {
     z-index: -1;
     border: 4px solid #ffffff;
 }
+
+#seeMore span {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: -1;
+    border: 4px solid #000000;
+}
+
 
 .btn span::before {
     content: "";
@@ -147,18 +160,32 @@ h1 {
     transition: all 0.3s ease;
 }
 
-.btn:hover span::before {
+#clickMe:hover span::before {
     transform: translate(-50%, -50%) rotate(-90deg);
     width: 100%;
     background: #000000;
 }
 
-.btn:hover {
-    color: rgb(0, 0, 0);
+#seeMore:hover span::before {
+    transform: translate(-50%, -50%) rotate(-90deg);
+    width: 100%;
+    background: #000000;
 }
 
-.btn:active span::before {
+#clickMe:hover {
+    color: #ffffff;
+}
+
+#seeMore:hover {
+    color: #ffffff;
+}
+
+#clickMe:active span::before {
     background: #000000;
+}
+
+#seeMore:active span::before {
+    background: #ffffff;
 }
 
 /* -------------------------------BEGIN------------------------------- */
@@ -171,10 +198,11 @@ h1 {
 /* -------------------------------SEE MORE------------------------------- */
 
 #seeMore {
-    color: #ffffff;
+    color: #000000;
     font-size: 2rem;
-    background-color: black;
+    background-color: #ffffff;
     /* border: 3px solid black; */
 
     margin: 1.5rem auto 4rem;
+    text-transform: uppercase;
 }
